--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1327,8 +1327,7 @@ RELEASE ME
         (set-frame-parameter (selected-frame)'alpha '(90 . 90))
         (add-to-list 'default-frame-alist '(alpha . (90 . 90)))
         (call-process-shell-command "~/.config/polybar/startpolybar" nil 0)     
-        ;; todo fix picom
-        ;; (call-process-shell-command "~/.config/picom/startpicom" nil 0)     
+        (call-process-shell-command "~/.config/picom/startpicom" nil 0)     
         ;; startup
         (call-process-shell-command "nm-applet" nil 0)     
         (call-process-shell-command "blueman-applet" nil 0)     
