--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1325,10 +1325,8 @@ RELEASE ME
         ;; background
         (call-process-shell-command "feh --bg-fill ~/background.png" nil 0)     
         (set-frame-parameter (selected-frame)'alpha '(90 . 90))
-        (setq default-frame-alist
-              '((alpha . 30)))
         (call-process-shell-command "~/.config/polybar/startpolybar" nil 0)     
-        (call-process-shell-command "~/.config/picom/startpicom" nil 0)     
+        ;; (call-process-shell-command "~/.config/picom/startpicom" nil 0)     
         ;; startup
         (call-process-shell-command "nm-applet" nil 0)     
         (call-process-shell-command "blueman-applet" nil 0)     
