--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1432,6 +1432,13 @@ RELEASE ME
 
     )
 #+end_src
+** ERC 
+#+begin_src emacs-lisp
+  (setq erc-nick "sahko"
+        erc-user-full-name "sako"
+        ;; erc-autojoin-channels-alist '(("irc-libera.chat" "#systemcrafters" "#emacs"))
+        erc-kill-buffer-on-part 8)
+#+end_src
 * Org Mode Configuration Setup
 ** Babel Languages
 #+begin_src emacs-lisp
