it did NOT get fixed

--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -1234,6 +1234,7 @@ Dired is a built-in file manager for Emacs that does some pretty amazing things!
 #+end_src
 ** RSS Reader
 #+begin_src emacs-lisp
+  (when (eq system-type 'gnu/linux)
     (use-package elfeed
     :config
     (setq elfeed-use-curl t)
@@ -1269,6 +1270,7 @@ Dired is a built-in file manager for Emacs that does some pretty amazing things!
 			  (elfeed-update))))
 
   ;; (add-hook 'emacs-startup-hook (elfeed-update))
+  )
 
     #+end_src
 ** Telegram
