--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -109,7 +109,7 @@ Should make startup faster, taken from doom-emacs
 We only enable Straight.el for anything other than NixOS
 Cause emacs overlay lol
 #+begin_src emacs-lisp
-  ;; TODO Test this one darwin someday
+  ;; TODO Test this on darwin someday
   (when (eq system-type 'windows-nt)
     (defvar bootstrap-version)
     (let ((bootstrap-file
@@ -126,10 +126,7 @@ Cause emacs overlay lol
           (goto-char (point-max))
           (eval-print-last-sexp)))
       (load bootstrap-file nil 'nomessage))
-    (use-package straight
-      :custom
-      (straight-use-package-by-default t))
-    )
+      (setq straight-use-package-by-default t))
 #+end_src
 * SPEED SPEED SPEED SPEED
 ** Avoid Garbage Collection at startup
@@ -1245,10 +1242,9 @@ Dired is a built-in file manager for Emacs that does some pretty amazing things!
 #+end_src
 ** RSS Reader
 #+begin_src emacs-lisp
-  (when (eq system-type 'gnu/linux)
     (use-package elfeed
     :config
-    (setq elfeed-use-curl t)
+    (setq elfeed-use-curl nil)
     (setq browse-url-browser-function 'eww-browse-url)
     (setq elfeed-search-title-max-width 100)
     )
@@ -1280,8 +1276,7 @@ Dired is a built-in file manager for Emacs that does some pretty amazing things!
 	     (lambda () (when (= elfeed-curl-queue-active 0)
 			  (elfeed-update))))
 
-  ;; (add-hook 'emacs-startup-hook (elfeed-update))
-  )
+  (add-hook 'emacs-startup-hook (elfeed-update))
 
     #+end_src
 ** Telegram
