--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -650,7 +650,7 @@ Cause emacs overlay lol
       (setq org-hide-emphasis-markers nil)
 
       ;; make latex previews better
-      (setq org-format-latex-options (:foreground default :background default :scale 2.0 :html-foreground "Black" :html-background "Transparent" :html-scale 2.0 :matchers ("begin" "$1" "$" "$$" "\\(" "\\[")))  
+      (setq org-format-latex-options '(:foreground default :background default :scale 2.0 :html-foreground "Black" :html-background "Transparent" :html-scale 2.0 :matchers ("begin" "$1" "$" "$$" "\\(" "\\[")))  
 
       ;; org mode src thing
       (require 'org-tempo)
