remove remaining projectile keybinds

--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -298,9 +298,7 @@ kept-old-versions 5)
    "pp" '(project-switch-project :which-key "open project")
    "pk" '(project-kill-buffers :which-key "close project")
    "pt" '(magit-todos-list :which-key "list project todos")
-   "ps" '(projectile-save-project-buffers :which-key "save project")
-   "po" '(projectile-find-other-file :which-key "find other file")
-   "pg" '(projectile-configure-project :which-key "configure project")
+   "po" '(project-find-file :which-key "find file")
    "pc" '(project-compile :which-key "compile project")
    ;; open
    "o" '(:ignore o :which-key "open")
