--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -262,7 +262,7 @@ kept-old-versions 5)
 #+begin_src emacs-lisp
 (if (eq system-type 'windows-nt)
     (setq server-socket-dir "~/.emacs.d/server"))
-;; (server-start)
+(server-start)
 #+end_src
 * Keys
 #+begin_src emacs-lisp
@@ -944,6 +944,16 @@ Ill set this up later as well
 ** Subsonic
 #+begin_src emacs-lisp
 (use-package subsonic)
+#+end_src
+** GPTel
+its over the machines took over guys can i get my likes now
+#+begin_src emacs-lisp
+    (use-package gptel
+      :config
+      (gptel-make-ollama "Ollama"            
+        :host "localhost:11434"              
+        :stream t                             
+        :models '("mistral:latest")))
 #+end_src
 * Org
 #+begin_src emacs-lisp
