add emacs-dashboard and change keybind

--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -49,6 +49,10 @@ Ill use this later eventually
 #+begin_src emacs-lisp
 (message "Got to keybinds")
 #+end_src
+** Make emacs more human
+#+begin_src emacs-lisp
+(global-set-key (kbd "<escape>") 'keyboard-escape-quit)
+#+end_src
 * Core
 #+begin_src elisp
   (message "Reached core.")
@@ -523,7 +527,31 @@ kept-old-versions 5)
   (add-hook 'minibuffer-setup-hook #'corfu-enable-in-minibuffer))
 #+end_src
 ** Dashboard
-TODO
+#+begin_src emacs-lisp
+  (use-package dashboard
+    :config
+    (setq initial-buffer-choice (lambda () (get-buffer-create dashboard-buffer-name)))
+
+    ;; Set the title
+    (setq dashboard-banner-logo-title "GET ME OUT GET ME OUT GET ME OUT")
+    (setq dashboard-image-banner-max-height 200)
+    ;; Set the banner
+    (setq dashboard-startup-banner '"~/.emacs.d/icon.png")
+    (setq dashboard-center-content t)
+    (setq dashboard-vertically-center-content t)
+    (setq dashboard-show-shortcuts nil)
+
+    ;; nerd icons
+    (setq dashboard-display-icons-p t)     ; display icons on both GUI and terminal
+    (setq dashboard-icon-type 'nerd-icons) ; use `nerd-icons' package
+
+    ;; list stuff
+    (setq dashboard-items '((recents   . 3)
+                        (projects  . 3)
+                        (agenda    . 3)))
+    
+    (dashboard-setup-startup-hook))
+#+end_src
 * Auth
 #+begin_src emacs-lisp
 (message "Reached auth")
