fix vertico messing around with shadowed paths

--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -427,6 +427,7 @@ kept-old-versions 5)
     :custom
     (vertico-cycle t)
 
+    :hook (rfn-eshadow-update-overlay . vertico-directory-tidy)
     :init
     (require 'vertico-directory)
     (vertico-mode))
