--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -6,43 +6,43 @@
 #+end_src
 * Package Setup 
 #+begin_src emacs-lisp
-  (message "Reached package setup")
+    (message "Reached package setup")
 
-  (require `package)
+    (require `package)
 
-(setq package-archives `(("mepla" . "https://melpa.org/packages/")
-                         ("org" . "https://orgmode.org/elpa/")
-                         ("elpa" . "https://elpa.gnu.org/packages/")))
+  (setq package-archives `(("mepla" . "https://melpa.org/packages/")
+                           ("org" . "https://orgmode.org/elpa/")
+                           ("elpa" . "https://elpa.gnu.org/packages/")))
 
-(package-initialize)
+  (package-initialize)
 
-(unless (package-installed-p 'use-package)
-  (progn
-    (package-refresh-contents)
-    (package-install 'use-package)))
+  (unless (package-installed-p 'use-package)
+    (progn
+      (package-refresh-contents)
+      (package-install 'use-package)))
 
-(require 'use-package)
-(setq use-package-always-ensure t)
+  (require 'use-package)
+  (setq use-package-always-ensure t)
 
-;; TODO add better detection to this
-(when (eq system-type 'windows-nt)
-  (message "setting up straight.el")
-  (defvar bootstrap-version)
-  (let ((bootstrap-file
-         (expand-file-name
-          "straight/repos/straight.el/bootstrap.el"
-          (or (bound-and-true-p straight-base-dir)
-              user-emacs-directory)))
-        (bootstrap-version 7))
-    (unless (file-exists-p bootstrap-file)
-      (with-current-buffer
-          (url-retrieve-synchronously
-           "https://raw.githubusercontent.com/radian-software/straight.el/develop/install.el"
-           'silent 'inhibit-cookies)
-        (goto-char (point-max))
-        (eval-print-last-sexp)))
-    (load bootstrap-file nil 'nomessage))
-    (setq straight-use-package-by-default t))
+  ;; TODO add better detection to this
+  (when (eq system-type 'windows-nt)
+    (message "setting up straight.el")
+    (defvar bootstrap-version)
+    (let ((bootstrap-file
+           (expand-file-name
+            "straight/repos/straight.el/bootstrap.el"
+            (or (bound-and-true-p straight-base-dir)
+                user-emacs-directory)))
+          (bootstrap-version 7))
+      (unless (file-exists-p bootstrap-file)
+        (with-current-buffer
+            (url-retrieve-synchronously
+             "https://raw.githubusercontent.com/radian-software/straight.el/develop/install.el"
+             'silent 'inhibit-cookies)
+          (goto-char (point-max))
+          (eval-print-last-sexp)))
+      (load bootstrap-file nil 'nomessage))
+      (setq straight-use-package-by-default t))
 #+end_src
 * Keybinds
 Ill use this later eventually
@@ -833,6 +833,13 @@ this should be useful later
 (use-package treemacs-nerd-icons
   :config
   (treemacs-load-theme "nerd-icons"))
+#+end_src
+** Direnv
+#+begin_src emacs-lisp
+  (when (eq system-type 'gnu/linux)
+    (use-package direnv
+      :config
+      (direnv-mode)))
 #+end_src
 * Languages
 #+begin_src emacs-lisp
