use evil for mu4e

--- a/config/emacs/emacs.org
+++ b/config/emacs/emacs.org
@@ -387,8 +387,8 @@ kept-old-versions 5)
     (setq evil-collection-company-use-tng nil)
     (delete 'lispy evil-collection-mode-list)
     (delete 'org-present evil-collection-mode-list)
-    (delete 'mu4e evil-collection-mode-list)
-    (delete 'mu4e-conversation evil-collection-mode-list)
+    ;; (delete 'mu4e evil-collection-mode-list)
+    ;; (delete 'mu4e-conversation evil-collection-mode-list)
     (evil-collection-init))
 
   (use-package evil-org
